feat: Fixture 패턴 도입으로 예약 관련 테스트 코드 구조 개선